Improved model and added AppDbContext

--- a/Football-League.Api/Football-League.Api.csproj
+++ b/Football-League.Api/Football-League.Api.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Football-League.Models\Football-League.Models.csproj" />
     <ProjectReference Include="..\Football-League.Services\Football-League.Services.csproj" />
   </ItemGroup>
 
