--- a/Football-League.Api/appsettings.json
+++ b/Football-League.Api/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Football-League;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
