--- a/Football-League.Models/Football-League.Models.csproj
+++ b/Football-League.Models/Football-League.Models.csproj
@@ -5,4 +5,9 @@
     <RootNamespace>Football_League.Models</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
+  </ItemGroup>
+
 </Project>
