--- a/Football-League.Services/Football-League.Services.csproj
+++ b/Football-League.Services/Football-League.Services.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Football_League.Services</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Football-League.Data\Football-League.Repositories.csproj" />
+  </ItemGroup>
+
 </Project>
