--- a/Football-League.Services/Football-League.Services.csproj
+++ b/Football-League.Services/Football-League.Services.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Football-League.Data\Football-League.Repositories.csproj" />
   </ItemGroup>
 
